[package]
name = "asm_like_lang"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
seahash = "4.0.0"
serde = {version = "1.0.104", features = ["derive"]}
bincode = "1.2.1"